# griptape-answer-cache-tool

./: .gitignore  README.md  pyproject.toml
answer_cache/: __init__.py  manifest.yml  tool.py
examples/: compose.yaml  example.py
tests/: test_answer_cache.py
