[tool.poetry]
name = "griptape-answer-cache-tool"
version = "0.1.0"
description = ""
authors = ["michal-repo"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
griptape = ">=0.20"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~=7.1"
pytest-mock = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
redis = "^5.0.3"
boto3 = "^1.34.87"

[tool.black]
line-length = 120
skip_magic_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
